# django-react

./: .gitignore  Pipfile  README.md
backend/: Pipfile  pyproject.toml
backend/areas/: admin.py  models.py  serializers.py  urls.py  views.py
backend/areas/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/cientificas/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/cientificas/migrations/: 0001_initial.py  0002_rename_cientificas_cientifica.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: Card.js  Input.js  Modal.js
frontend/src/services/: areas.js  cientificas.js  helper.js
